Fixed list item spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -188,7 +188,7 @@ hr.line {
 }
 
 .code-explanation li {
-  margin: 0 0 0.5rem 1rem;
+  margin: 0 0 0.25rem 1.5rem;
 }
 
 /* Style definition list terms. */
